<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pizarra"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/idDocumento"
        android:layout_width="160sp"
        android:layout_height="wrap_content"
        android:backgroundTint="#D8DFE6D5"
        android:ems="10"
        android:fontFamily="casual"
        android:inputType="textPersonName"
        android:maxLength="10"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#D8DFE6D5"
        android:textColorHint="#000000"
        android:textColorLink="#D8DFE6D5"
        android:textCursorDrawable="@drawable/edit_text_cursor"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.237" />

    <TextView
        android:id="@+id/idTextDocumento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/documento"
        android:textColor="#D8DFE6D5"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/idDocumento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/idTextNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="casual"
        android:text="@string/nombre"
        android:textColor="#D8DFE6D5"
        android:textColorHighlight="#4CAF50"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/idNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idDocumento"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/idNombre"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:backgroundTint="#D8DFE6D5"
        android:ems="10"
        android:fontFamily="casual"
        android:inputType="textPersonName"
        android:maxLength="50"
        android:textAlignment="center"
        android:textColor="#D8DFE6D5"
        android:textCursorDrawable="@drawable/edit_text_cursor"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idDocumento"
        app:layout_constraintVertical_bias="0.133" />

    <TextView
        android:id="@+id/idTextEdad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="casual"
        android:text="@string/edad"
        android:textColor="#D8DFE6D5"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/idEdad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.288"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idNombre"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/idEdad"
        android:layout_width="107dp"
        android:layout_height="42dp"
        android:backgroundTint="#D8DFE6D5"
        android:ems="10"
        android:fontFamily="casual"
        android:inputType="textPersonName"
        android:maxLength="2"
        android:textAlignment="center"
        android:textColor="#D8DFE6D5"
        android:textCursorDrawable="@drawable/edit_text_cursor"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idNombre"
        app:layout_constraintVertical_bias="0.178" />

    <TextView
        android:id="@+id/idTextTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/telefono"
        android:textColor="#D8DFE6D5"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/idTelefono"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.789"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idNombre"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/idTelefono"
        android:layout_width="182dp"
        android:layout_height="42dp"
        android:backgroundTint="#D8DFE6D5"
        android:ems="10"
        android:fontFamily="casual"
        android:inputType="textPersonName"
        android:maxLength="10"
        android:textAlignment="center"
        android:textColor="#D8DFE6D5"
        android:textCursorDrawable="@drawable/edit_text_cursor"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idNombre"
        app:layout_constraintVertical_bias="0.176" />

    <TextView
        android:id="@+id/idTextDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/direccion"
        android:textColor="#D8DFE6D5"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/idDireccion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTelefono"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/idDireccion"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:backgroundTint="#D8DFE6D5"
        android:ems="10"
        android:fontFamily="casual"
        android:inputType="textPersonName"
        android:maxLength="50"
        android:textAlignment="center"
        android:textColor="#D8DFE6D5"
        android:textCursorDrawable="@drawable/edit_text_cursor"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTelefono"
        app:layout_constraintVertical_bias="0.279" />

    <Button
        android:id="@+id/idBottonEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bordes_boton"
        android:backgroundTint="#474A44"
        android:elevation="10dp"
        android:fontFamily="casual"
        android:rotationX="-8"
        android:shadowColor="#120B0B"
        android:text="@string/iniciar"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idDireccion"
        app:layout_constraintVertical_bias="0.678" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/mis_peque_os_saltamontes"
        android:textColor="#D8DFE6D5"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/idDocumento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.522" />

    <Button
        android:id="@+id/idButtonEstadisticas"
        android:layout_width="83dp"
        android:layout_height="40dp"
        android:fontFamily="casual"
        android:text="ESTADISTICAS"
        android:textSize="9sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idDireccion"
        app:layout_constraintVertical_bias="0.894" />

    <Button
        android:id="@+id/idButtonAyuda"
        android:layout_width="64dp"
        android:layout_height="53dp"
        android:background="@android:drawable/ic_menu_help"
        android:rotation="-17"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.194" />

</android.support.constraint.ConstraintLayout>