<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pizarra"
    android:backgroundTintMode="add"
    tools:context=".NotasActivity">

    <Button
        android:id="@+id/idButtonProcesar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bordes_boton"
        android:backgroundTint="#6B7067"
        android:rotationX="-8"
        android:text="@string/procesar"
        android:textColor="#D8DFE6D5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.937" />

    <Spinner
        android:id="@+id/idSpinnerMaterias"
        android:layout_width="245dp"
        android:layout_height="30dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="1dp"
        android:backgroundTint="#D8DFE6D5"
        android:gravity="center"
        android:hapticFeedbackEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/idTextNombreMateria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.77" />

    <TextView
        android:id="@+id/idTextNombreMateria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/nombre_materia"
        android:textColor="#D8DFE6D5"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/idEditNombreMateria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/idEditNombreMateria"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:backgroundTint="#D8DFE6D5"
        android:ems="10"
        android:fontFamily="casual"
        android:inputType="textPersonName"
        android:maxLength="5"
        android:textAlignment="center"
        android:textColor="#D8DFE6D5"
        android:textCursorDrawable="@drawable/edit_text_cursor"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/idTextNotaMateria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.849" />

    <TextView
        android:id="@+id/idTextNotaMateria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/nota_materia"
        android:textColor="#D8DFE6D5"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/idEditNotaMateria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/idEditNotaMateria"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="90dp"
        android:backgroundTint="#D8DFE6D5"
        android:ems="10"
        android:fontFamily="casual"
        android:inputType="numberDecimal"
        android:maxLength="5"
        android:textAlignment="center"
        android:textColor="#D8DFE6D5"
        android:textColorHighlight="#D8DFE6D5"
        android:textCursorDrawable="@drawable/edit_text_cursor"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/idButtonProcesar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.839" />

    <TextView
        android:id="@+id/idTextTituloNotas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/textview"
        android:textAlignment="center"
        android:textColor="#D8DFE6D5"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/idSpinnerMaterias"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.672" />

    <TextView
        android:id="@+id/idTextDocumentoN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="152dp"
        android:fontFamily="casual"
        android:rotation="25"
        android:text="@string/textview"
        android:textColor="#D8DFE6D5"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idEditNotaMateria"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/idTextEdadN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="152dp"
        android:fontFamily="casual"
        android:rotation="-25"
        android:text="@string/textview"
        android:textColor="#D8DFE6D5"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.814"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idEditNotaMateria"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>